2011-03-30  Levi Weintraub  <leviw@chromium.org>

Reviewed by Ryosuke Niwa.

        Clicking below last line of right-to-left editable text that puts caret in the wrong place
        https://bugs.webkit.org/show_bug.cgi?id=38087

        Moving getLogical[Start/End]BoxWithNode to RootInlineBox and using it in positionForPointWithInlineChildren
        instead of lastLeafChild, which wasn't correct in the RTL case.

        Test: editing/selection/click-below-rtl-text.html

        * editing/visible_units.cpp:
        (WebCore::logicalStartPositionForLine): Moved to RootInlineBox.
        (WebCore::logicalEndPositionForLine): Ditto.
        * editing/visible_units.h:
        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::positionForPointWithInlineChildren): Useing getLogicalEndBoxWithNode instead
        of lastLeafChild.
        * rendering/RootInlineBox.cpp:
        (WebCore::RootInlineBox::getLogicalStartBoxWithNode): Moved and refactored.
        (WebCore::RootInlineBox::getLogicalEndBoxWithNode): Ditto.
        * rendering/RootInlineBox.h:
2011-03-30  Levi Weintraub  <leviw@chromium.org>

        Reviewed by Ryosuke Niwa.

        Clicking below last line of right-to-left editable text that puts caret in the wrong place
        https://bugs.webkit.org/show_bug.cgi?id=38087

        Doing the right thing when clicking below the last line box in RTL editable content.

        * editing/selection/click-below-rtl-text-expected.txt: Added.
        * editing/selection/click-below-rtl-text.html: Added.


Canonical link: https://commits.webkit.org/72245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82447 268f45cc-cd09-0410-ab3c-d52691b4dbfc