Source/WebCore/rendering/RootInlineBox.h
@@ -142,6 +142,8 @@ public:
     bool fitsToGlyphs() const;
     bool includesRootLineBoxFontOrLeading() const;
 
+    Node* getLogicalStartBoxWithNode(InlineBox*&);
+    Node* getLogicalEndBoxWithNode(InlineBox*&);
 private:
     bool hasEllipsisBox() const { return m_hasEllipsisBoxOrHyphen; }
     void setHasEllipsisBox(bool hasEllipsisBox) { m_hasEllipsisBoxOrHyphen = hasEllipsisBox; }
